# searchA-Star

./: CMakeLists.txt  README.md
SearchA/: grafo-teste.pd  searchA-help.pd  teste.pd
SearchA/data/: grafo-IB.txt  grafo.txt  grafo_.txt  teste.txt
Sources/: searchA.c
